# opengl-journey

./: CMakeLists.txt
src/Application/: application.cpp  utils.cpp  utils.h
src/Exercises/PyramidAnimation/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  model.cpp  model.h  obj_loader.cpp  obj_loader.h  pyramid.cpp  pyramid.h  rotation.h
src/Exercises/PyramidAnimation/shaders/: base_fs.glsl  base_vs.glsl  basic_fragment_shader.glsl  basic_vertex_shader.glsl
